syntax = "proto3";

package atomic_service_mbsb_Package;



message atomic_service_mbsb_task_A_Request_st {
    
    int32 number1 = 1;
    
    int32 number2 = 2;
    
}


message atomic_service_mbsb_task_A_Reply_st {
    
    int32 sum_result = 1;
    
    int32 return_type = 2;
    
}


message atomic_service_mbsb_task_B_Request_st {
    
    int32 number1 = 1;
    
    int32 number2 = 2;
    
}


message atomic_service_mbsb_task_B_Reply_st {
    
    int32 sub_result = 1;
    
    int32 return_type = 2;
    
}




service atomic_service_mbsb_Service {
    
    rpc atomic_service_fun_task_A (atomic_service_mbsb_task_A_Request_st) returns (atomic_service_mbsb_task_A_Reply_st) {}
    
    rpc atomic_service_fun_task_B (atomic_service_mbsb_task_B_Request_st) returns (atomic_service_mbsb_task_B_Reply_st) {}
    
}
